fix: tab menu z-index

--- a/htdocs/luci-static/m3e/cascade.css
+++ b/htdocs/luci-static/m3e/cascade.css
@@ -1454,6 +1454,8 @@
 		justify-content: center;
 		width: 100%;
 		height: 100%;
+		position: relative;
+		z-index: 1;
 	}
 
 	.cbi-tabmenu>li:hover,
